<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvNombre" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etNombre" >
            <requestFocus />

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.15"
            android:text="@string/tvDatos" />

        <EditText
            android:id="@+id/etDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etDatos" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:text="@string/btGuardar"
        android:onClick="guardar" />

    <Button
        android:id="@+id/btObtener"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:text="@string/btObtener"
        android:onClick="obtener" />

    <TextView
        android:id="@+id/tvSalida"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:text="@string/tvSalida"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>